@@ -5720,4 +5720,7 @@ PACKAGE: 2.2.99.2
     as no session is available at that point). 
  * Renamed $name to $a_name/$e_name in BibTeX, as this was giving
     warnings.
- 
+
+2006-11-28 moj
+ * Missed phrase in XML, tidied up file a bit.
+ * General testing with flawed XML import file. 
